syntax = "proto3";

package go.micro.srv.chat;

message RegisterRequest { 
    string username = 1; 
    string password = 2;
    string id = 3;
}
message RegisterResponse { bool connected = 1; }

message UnregisterRequest { string username = 1; }
message UnregisterResponse { bool connected = 1; }

message Message {
  string sender = 1;
  string receiver = 2;
  string msg = 3;
  int32 type = 4;
}

service ChatService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Unregister(UnregisterRequest) returns (UnregisterResponse) {}
  rpc Socket(stream Message) returns (stream Message) {}
}
